--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "backbone": "~1.1.2",
-    "angular": "~1.3.0"
+    "angular": "~1.3.0",
+    "angular-sanitize": "~1.3.0"
   }
 }
