--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "backbone": "~1.1.2",
     "angular": "~1.3.0",
-    "angular-sanitize": "~1.3.0"
+    "angular-sanitize": "~1.3.0",
+    "ngDialog": "~0.3.1"
   }
 }
