--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "backbone": "~1.1.2",
     "angular": "~1.3.0",
     "angular-sanitize": "~1.3.0",
-    "ngDialog": "~0.3.1"
+    "ngDialog": "~0.3.1",
+    "angular-translate": "~2.4.2"
   }
 }
