--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular": "~1.3.0",
     "angular-sanitize": "~1.3.0",
     "ngDialog": "~0.3.1",
-    "angular-translate": "~2.4.2"
+    "angular-translate": "~2.4.2",
+    "lesshat": "~3.0.2"
   }
 }
