--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
     "scripts":{
         "post-install-cmd": [
             "echo \"#!/bin/bash\" >> update.sh",
+            "echo \"git stash\" >> update.sh",
+            "echo \"git pull\" >> update.sh",
             "echo \"php composer.phar update\" >> update.sh",
             "chmod +x update.sh"
         ],
