--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
             "chmod +x update.sh"
         ],
         "post-update-cmd": [
-            "update.sh"
+            "./update.sh"
         ]
 
     }
