--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-sanitize": "~1.3.0",
     "angular-translate": "~2.4.2",
     "lesshat": "~3.0.2",
-    "angular-md5": "~0.1.7"
+    "angular-md5": "~0.1.7",
+    "ng-sortable": "~1.2.2"
   }
 }
