Added LogHelper Support

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -44,7 +44,13 @@
       "PostModel": [],
       "CommentModel": [],
       "UserModel": [],
-      "Rest": []
-    }
+      "Rest": [],
+      "Admin": [
+        "logs"
+      ]
+    },
+    "consolePages": [
+      "logs"
+    ]
   }
 }
