--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
             "echo \"git pull\" >> update.sh",
             "echo \"composer update\" >> update.sh",
             "chmod +x update.sh",
-            "mkdir logs"
+            "mkdir logs",
+            "chmod +w logs"
         ],
         "post-update-cmd": [
         ]
