--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Boris Mossounov <borix@tut.by>",
   "dependencies": {},
   "devDependencies": {
+    "babel-preset-es2015": "^6.5.0",
+    "del": "^2.2.0",
     "grunt": "*",
     "grunt-autoprefixer": "*",
     "grunt-contrib-clean": "*",
@@ -17,7 +19,24 @@
     "grunt-contrib-uglify": "*",
     "grunt-contrib-watch": "*",
     "grunt-dgeni": "0.0.3",
-    "load-grunt-tasks": "*"
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-csslint": "^0.2.0",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.2",
+    "imagemin-pngquant": "^4.2.2",
+    "jshint": "^2.9.1",
+    "load-grunt-tasks": "*",
+    "merge-stream": "^1.0.0"
   },
   "repository": {
     "type": "git",
