Fixing standalone mode

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -47,7 +47,8 @@
       "Rest": [],
       "Admin": [
         "logs"
-      ]
+      ],
+      "Update": []
     },
     "consolePages": [
       "logs"
