--- a/phpci.yml
+++ b/phpci.yml
@@ -4,9 +4,9 @@ build_settings:
 setup:
     composer:
         action: "install"
-    shell:
-        - "ls ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp && rm -r ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp"
-        - "cp %BUILD_PATH% ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp"
+#    shell:
+#        - "ls ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp && rm -r ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp"
+#        - "cp %BUILD_PATH% ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp"
 
 test:
     php_unit:
@@ -17,7 +17,7 @@ test:
 #        run_from: "phpunit/"
 #        coverage: "tests/logs/coverage"
 
-    shell:
-        - "bash %BUILD_PATH%/tests/casperjs/test.sh"
+#    shell:
+#        - "bash %BUILD_PATH%/tests/casperjs/test.sh"
 
 complete:
