--- a/phpci.yml
+++ b/phpci.yml
@@ -6,6 +6,7 @@ setup:
         action: "install"
     shell:
         - "ls ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp && rm -r ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp"
+        - "mkdir ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp"
         - "cp ./* ${WP_CI_DIR}wp-content/plugins/Chayka.Core.wpp"
 
 test:
