--- a/phpci.yml
+++ b/phpci.yml
@@ -16,7 +16,7 @@ setup:
 test:
     shell:
         - "phpunit --tap"
-        - "cd ./tests/casperjs/ && ./test.sh | sed 's/\[\d+;\d+m//'"
+        - 'cd ./tests/casperjs/ && ./test.sh | sed "s/\[\d+;\d+m//"'
 #    php_unit:
 #        config:
 #            - "phpunit.xml.dist"
