+ merged with Chayka.Email + added OptionHelper + console page controllers -> directives + chayka-options-form merged with chayka-wp-admin - grunt file

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -49,10 +49,14 @@
         "logs"
       ],
       "Update": [],
-      "Buggy": []
+      "Buggy": [],
+      "Email": []
     },
     "consolePages": [
       "logs"
+    ],
+    "helpers": [
+      "option"
     ]
   }
 }
