--- a/package.json
+++ b/package.json
@@ -5,40 +5,24 @@
   "author": "Boris Mossounov <borix@tut.by>",
   "dependencies": {},
   "devDependencies": {
-    "babel-preset-es2015": "^6.5.0",
-    "del": "^2.2.0",
-    "grunt": "*",
-    "grunt-autoprefixer": "*",
-    "grunt-bump": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-contrib-concat": "*",
-    "grunt-contrib-csslint": "*",
-    "grunt-contrib-cssmin": "*",
-    "grunt-contrib-imagemin": "*",
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-less": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-dgeni": "0.0.3",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-bump": "^2.1.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-csslint": "^0.2.0",
-    "gulp-cssnano": "^2.1.1",
-    "gulp-eslint": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-less": "^3.0.5",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.2",
-    "imagemin-pngquant": "^4.2.2",
-    "jshint": "^2.9.1",
-    "load-grunt-tasks": "*",
-    "merge-stream": "^1.0.0",
+    "gulp-autoprefixer": "*",
+    "gulp-bump": "*",
+    "gulp-clean": "*",
+    "gulp-concat": "*",
+    "gulp-csslint": "*",
+    "gulp-cssnano": "*",
+    "gulp-git": "*",
+    "gulp-htmlmin": "*",
+    "gulp-imagemin": "*",
+    "gulp-jshint": "*",
+    "gulp-less": "*",
+    "gulp-plumber": "*",
+    "gulp-shell": "*",
+    "gulp-sourcemaps": "*",
+    "gulp-uglify": "*",
+    "imagemin-pngquant": "*",
+    "jshint": "*",
+    "run-sequence": "*",
     "yargs": "*"
   },
   "repository": {
